--- a/UniTester/public/views/headered.pug
+++ b/UniTester/public/views/headered.pug
@@ -38,5 +38,6 @@ block jsEnabledContent
 			last=new Date().getTime()
 			setTimeout(onFocusChange,100)
 		})
-	div#interface(align="center" style="position: relative;")
-		block content
+	div(align="center" style="position: relative;")
+		div#interface
+			block content
