--- a/UniTester/public/views/testings.pug
+++ b/UniTester/public/views/testings.pug
@@ -8,4 +8,5 @@ block inHead0
 
 block content
 	- for(var v=0;v<data.testingsInfo.length;v++)
-		button(onclick="window.location.replace('/testing?id="+data.testingsInfo[v].id+"&questionNumber=0')") #{$msgs$.openTesting} '#{data.testingsInfo[v].id}'
+		button
+			a.nontexthref(href="/testing?id="+data.testingsInfo[v].id+"&questionNumber=0") #{$msgs$.openTesting} '#{data.testingsInfo[v].id}'
