--- a/UniTester/public/views/testNotExist.pug
+++ b/UniTester/public/views/testNotExist.pug
@@ -1,7 +1,7 @@
 extends /headered
 
 block title
-	title #{$msgs$.sitename} - #{$msgs$.error_testNotExist} - #{$msgs$.sitename}
+	title #{$msgs$.error_testNotExist} - #{$msgs$.sitename}
 
 block inHead0
 	link(rel='stylesheet', href='/stylesheets/style2.css')
