--- a/UniTester/public/stylesheets/style.css
+++ b/UniTester/public/stylesheets/style.css
@@ -1,6 +1,7 @@
 * {
 	margin: 0px;
 	padding: 0px;
+	opacity: 1;
 }
 
 body {
@@ -53,4 +54,12 @@ table.tableInTd {
 .tooltipped:hover::after {
 	opacity: 1; /* Показываем его */
 	visibility: visible;
+}
+
+.elementWithLeftBorder {
+	border-left: 1px solid black;
+}
+
+.tableWith10pxBorder {
+	border-spacing: 10px;
 }
