--- a/UniTester/public/views/testing.pug
+++ b/UniTester/public/views/testing.pug
@@ -1,7 +1,7 @@
 extends /headered
 
 block title
-	title #{$msgs$.testing} - #{$msgs$.sitename}
+	title #{getMsg('testing')} - #{getMsg('sitename')}
 
 block inHead0
 	link(rel='stylesheet', href='/stylesheets/style2.css')
@@ -26,7 +26,7 @@ block content
 		}
 		function save()
 		{
-			sendRequest('post','/testing','selected='+JSON.stringify({userAnswer:getUserAnswer()}))
+			sendRequest('post','/testing','questionNumber=#{data.test.testQuestionNumber}&testingId=#{data.testing._id}&userAnswer='+JSON.stringify(getUserAnswer()))
 		}
 		var testElText
 		function timerClick(th)
@@ -37,29 +37,29 @@ block content
 				th.setAttribute('class',th.getAttribute('class')+' activeCSS')
 				testElText=testEl.innerHTML
 				testEl.innerHTML=""
-				th.setAttribute('title',$msgs$.clickToUnpause)
+				th.setAttribute('title',getMsg('clickToUnpause'))
 			}
 			else
 			{
 				th.setAttribute('class',th.getAttribute('class').replace('activeCSS',''))
 				testEl.innerHTML=testElText
-				th.setAttribute('title',$msgs$.clickToPause)
+				th.setAttribute('title',getMsg('clickToPause'))
 			}
 		}
-	button#timer.greenButton(onclick="timerClick(this)" title=$msgs$.clickToPause)
+	button#timer.greenButton(onclick="timerClick(this)" title=getMsg('clickToPause'))
 	div#test
 		table
 			tr
 				- for(var v=0;v<data.test.questionsCount;v++)
 					td
-						button.greenButton(disabled=!data.testSettings.canGoToAllAnswers title=!data.testSettings.canGoToAllAnswers?$msgs$.inThisTestCantGoToAllAnswers:undefined onclick="save();goToQuestion("+v+")")!= v
+						button.greenButton(disabled=!data.testSettings.canGoToAllAnswers title=!data.testSettings.canGoToAllAnswers?getMsg('inThisTestCantGoToAllAnswers'):undefined onclick="save();goToQuestion("+v+")")!= v
 		table
 			tr
 				td
-					button#back.greenButton(disabled=data.test.testQuestionNumber<=0 title=data.test.testQuestionNumber<=0?$msgs$.questionsBeforeThisNotExist:undefined onclick="save();goToQuestion(Number.parseInt(requestQuery.questionNumber)-1)") #{$msgs$.back}
+					button#back.greenButton(disabled=data.test.testQuestionNumber<=0 title=data.test.testQuestionNumber<=0?getMsg('questionsBeforeThisNotExist'):undefined onclick="save();goToQuestion(Number.parseInt(requestQuery.questionNumber)-1)") #{getMsg('back')}
 				td
-					button#next.greenButton(disabled=data.test.testQuestionNumber>=data.test.questionsCount-1 title=data.test.testQuestionNumber>=data.test.questionsCount-1?$msgs$.questionsAfterThisNotExist:undefined onclick="save();goToQuestion(Number.parseInt(requestQuery.questionNumber)+1)") #{$msgs$.next}
-		div.question(style="margin: 20px;") #{$msgs$.questionNumber} #{data.test.testQuestionNumber}
+					button#next.greenButton(disabled=data.test.testQuestionNumber>=data.test.questionsCount-1 title=data.test.testQuestionNumber>=data.test.questionsCount-1?getMsg('questionsAfterThisNotExist'):undefined onclick="save();goToQuestion(Number.parseInt(requestQuery.questionNumber)+1)") #{getMsg('next')}
+		div.question(style="margin: 20px;") #{getMsg('questionNumber')} #{data.test.testQuestionNumber}
 			div!= data.test.testQuestion.question.html
 			- if(!data.test.testQuestion.answerVariantsInOriginalOrder)
 				- var vs = []
@@ -79,14 +79,14 @@ block content
 				- data.test.testQuestion.answerVariants=vs
 			- if(data.test.testQuestion.type==='chooseOne')
 				- for(var v=0;v<data.test.testQuestion.answerVariants.length;v++)
-					button.greenButton.answerVariant(title=$msgs$.answerVariantNumber+v onclick="var vs=document.getElementsByClassName('answerVariant');for(var v=0;v<vs.length;v++)vs[v].setAttribute('class',vs[v].getAttribute('class').replace('activeCSS',''));this.setAttribute('class',this.getAttribute('class')+' activeCSS');")!= data.test.testQuestion.answerVariants[v].html
+					button.greenButton.answerVariant(title=getMsg('answerVariantNumber')+v onclick="var vs=document.getElementsByClassName('answerVariant');for(var v=0;v<vs.length;v++)vs[v].setAttribute('class',vs[v].getAttribute('class').replace('activeCSS',''));this.setAttribute('class',this.getAttribute('class')+' activeCSS');")!= data.test.testQuestion.answerVariants[v].html
 				script.
 					function getUserAnswer()
 					{
 						return document.getElementsByClassName('answerVariant activeCSS')[0].textContent
 					}
 			- if(data.test.testQuestion.type==='enterText')
-				input#answerEnter(title=$msgs$.fieldForTextAnswerEnter)
+				input#answerEnter(title=getMsg('fieldForTextAnswerEnter'))
 				script.
 					function getUserAnswer()
 					{
@@ -94,7 +94,7 @@ block content
 					}
 			- if(data.test.testQuestion.type==='selectMultiple')
 				- for(var v=0;v<data.test.testQuestion.answerVariants.length;v++)
-					button.greenButton.answerVariant(title=$msgs$.answerVariantNumber+v onclick="if(this.getAttribute('class').indexOf('activeCSS')===-1)this.setAttribute('class',this.getAttribute('class')+' activeCSS');else this.setAttribute('class',this.getAttribute('class').replace('activeCSS',''));")!= data.test.testQuestion.answerVariants[v].html
+					button.greenButton.answerVariant(title=getMsg('answerVariantNumber')+v onclick="if(this.getAttribute('class').indexOf('activeCSS')===-1)this.setAttribute('class',this.getAttribute('class')+' activeCSS');else this.setAttribute('class',this.getAttribute('class').replace('activeCSS',''));")!= data.test.testQuestion.answerVariants[v].html
 				script.
 					function getUserAnswer()
 					{
@@ -105,15 +105,8 @@ block content
 						return answers
 					}
 		script.
-			var time=#{(data.testing.startDate instanceof Date)&&typeof(data.testing.timeLimit)==="number"?Math.min(data.testing.maximalEndingDate?data.testing.maximalEndingDate.getTime():Infinity, data.testing.startDate.getTime()+data.testing.timeLimit):"'unlimited'"}
-			function toSigns(number, signs)
-			{
-				number=number+""
-				signs=signs||2
-				for(;number.length<signs;)
-					number="0"+number
-				return number
-			}
+			var time=#{JSON.stringify(data.testing.date.getTime()+data.testing.timeLimit)}
+			console.log(time)
 			var g=false
 			function lengthed(v)
 			{
@@ -123,14 +116,12 @@ block content
 			function recalc()
 			{
 				if(time==="unlimited")
-					return document.getElementById("timer").textContent=$msgs$.unlimited
+					return document.getElementById("timer").textContent=getMsg('unlimited')
 				g=false
-				var timeTo=new Date(time-new Date().getTime())
-				return document.getElementById("timer").textContent=lengthed(toSigns(timeTo.getFullYear()-1970)+".")+lengthed(toSigns(timeTo.getMonth())+".")+lengthed(toSigns(timeTo.getDate()-1)+" ")+lengthed(toSigns(timeTo.getHours()-5)+":")+lengthed(toSigns(timeTo.getMinutes())+" ")+lengthed(toSigns(timeTo.getSeconds()))
+				var timeTo=time-new Date().getTime()
+				return document.getElementById("timer").textContent=lengthed(addZeros(Math.floor(timeTo/1000/60/60%24))+":")+lengthed(addZeros(Math.floor(timeTo/1000/60%60))+" ")+lengthed(addZeros(Math.floor(timeTo/1000%60)))
 			}
 			recalc()
 			setInterval(recalc, 1000)
-		
-			
-		button#saveTest.greenButton(onclick="save()") #{$msgs$.saveTest}
-		button#exit.greenButton(onclick="save();window.location.pathname='/'") #{$msgs$.exit}
+		button#saveTest.greenButton(onclick="save()") #{getMsg('saveTest')}
+		button#exit.greenButton(onclick="save();window.location.pathname='/'") #{getMsg('exit')}
